--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 h1 {
     color:wheat;
+    border: 1px solid rgba(202, 77, 77, 0.459);
+}
+
+.footer {
+    background-color: rgb(141, 201, 117);
 }
